// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldIcon changes fill when scripted is true 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon"
  fill="dark"
  iconType="tokenNumber"
  size="s"
  title="test"
/>
`;

exports[`FieldIcon renders an icon for an unknown type 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon"
  color="gray"
  iconType="question"
  size="s"
  title="test"
/>
`;

exports[`FieldIcon renders known field types _source is rendered 1`] = `
<EuiToken
  aria-label="_source"
  className="kbnFieldIcon"
  color="gray"
  iconType="editorCodeBlock"
  size="s"
  title="_source"
/>
`;

exports[`FieldIcon renders known field types binary is rendered 1`] = `
<EuiToken
  aria-label="binary"
  className="kbnFieldIcon"
  iconType="tokenBinary"
  size="s"
  title="binary"
/>
`;

exports[`FieldIcon renders known field types boolean is rendered 1`] = `
<EuiToken
  aria-label="boolean"
  className="kbnFieldIcon"
  iconType="tokenBoolean"
  size="s"
  title="boolean"
/>
`;

exports[`FieldIcon renders known field types byte is rendered 1`] = `
<EuiToken
  aria-label="byte"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="byte"
/>
`;

exports[`FieldIcon renders known field types conflict is rendered 1`] = `
<EuiToken
  aria-label="conflict"
  className="kbnFieldIcon"
  color="euiColorVis9"
  iconType="warning"
  shape="square"
  size="s"
  title="conflict"
/>
`;

exports[`FieldIcon renders known field types constant_keyword is rendered 1`] = `
<EuiToken
  aria-label="constant_keyword"
  className="kbnFieldIcon"
  iconType="tokenConstant"
  size="s"
  title="constant_keyword"
/>
`;

exports[`FieldIcon renders known field types counter is rendered 1`] = `
<EuiToken
  aria-label="counter"
  className="kbnFieldIcon"
  iconType="tokenMetricCounter"
  size="s"
  title="counter"
/>
`;

exports[`FieldIcon renders known field types date is rendered 1`] = `
<EuiToken
  aria-label="date"
  className="kbnFieldIcon"
  iconType="tokenDate"
  size="s"
  title="date"
/>
`;

exports[`FieldIcon renders known field types date_nanos is rendered 1`] = `
<EuiToken
  aria-label="date_nanos"
  className="kbnFieldIcon"
  iconType="tokenDate"
  size="s"
  title="date_nanos"
/>
`;

exports[`FieldIcon renders known field types date_range is rendered 1`] = `
<EuiToken
  aria-label="date_range"
  className="kbnFieldIcon"
  iconType="tokenDate"
  size="s"
  title="date_range"
/>
`;

exports[`FieldIcon renders known field types dense_vector is rendered 1`] = `
<EuiToken
  aria-label="dense_vector"
  className="kbnFieldIcon"
  iconType="tokenVectorDense"
  size="s"
  title="dense_vector"
/>
`;

exports[`FieldIcon renders known field types double is rendered 1`] = `
<EuiToken
  aria-label="double"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="double"
/>
`;

exports[`FieldIcon renders known field types exponential_histogram is rendered 1`] = `
<EuiToken
  aria-label="exponential_histogram"
  className="kbnFieldIcon"
  iconType="tokenHistogram"
  size="s"
  title="exponential_histogram"
/>
`;

exports[`FieldIcon renders known field types flattened is rendered 1`] = `
<EuiToken
  aria-label="flattened"
  className="kbnFieldIcon"
  iconType="tokenFlattened"
  size="s"
  title="flattened"
/>
`;

exports[`FieldIcon renders known field types float is rendered 1`] = `
<EuiToken
  aria-label="float"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="float"
/>
`;

exports[`FieldIcon renders known field types gauge is rendered 1`] = `
<EuiToken
  aria-label="gauge"
  className="kbnFieldIcon"
  iconType="tokenMetricGauge"
  size="s"
  title="gauge"
/>
`;

exports[`FieldIcon renders known field types geo_point is rendered 1`] = `
<EuiToken
  aria-label="geo_point"
  className="kbnFieldIcon"
  iconType="tokenGeo"
  size="s"
  title="geo_point"
/>
`;

exports[`FieldIcon renders known field types geo_shape is rendered 1`] = `
<EuiToken
  aria-label="geo_shape"
  className="kbnFieldIcon"
  iconType="tokenGeo"
  size="s"
  title="geo_shape"
/>
`;

exports[`FieldIcon renders known field types half_float is rendered 1`] = `
<EuiToken
  aria-label="half_float"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="half_float"
/>
`;

exports[`FieldIcon renders known field types histogram is rendered 1`] = `
<EuiToken
  aria-label="histogram"
  className="kbnFieldIcon"
  iconType="tokenHistogram"
  size="s"
  title="histogram"
/>
`;

exports[`FieldIcon renders known field types integer is rendered 1`] = `
<EuiToken
  aria-label="integer"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="integer"
/>
`;

exports[`FieldIcon renders known field types ip is rendered 1`] = `
<EuiToken
  aria-label="ip"
  className="kbnFieldIcon"
  iconType="tokenIP"
  size="s"
  title="ip"
/>
`;

exports[`FieldIcon renders known field types ip_range is rendered 1`] = `
<EuiToken
  aria-label="ip_range"
  className="kbnFieldIcon"
  iconType="tokenIP"
  size="s"
  title="ip_range"
/>
`;

exports[`FieldIcon renders known field types keyword is rendered 1`] = `
<EuiToken
  aria-label="keyword"
  className="kbnFieldIcon"
  iconType="tokenKeyword"
  size="s"
  title="keyword"
/>
`;

exports[`FieldIcon renders known field types long is rendered 1`] = `
<EuiToken
  aria-label="long"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="long"
/>
`;

exports[`FieldIcon renders known field types match_only_text is rendered 1`] = `
<EuiToken
  aria-label="match_only_text"
  className="kbnFieldIcon"
  iconType="tokenString"
  size="s"
  title="match_only_text"
/>
`;

exports[`FieldIcon renders known field types murmur3 is rendered 1`] = `
<EuiToken
  aria-label="murmur3"
  className="kbnFieldIcon"
  iconType="tokenSearchType"
  size="s"
  title="murmur3"
/>
`;

exports[`FieldIcon renders known field types nested is rendered 1`] = `
<EuiToken
  aria-label="nested"
  className="kbnFieldIcon"
  iconType="tokenNested"
  size="s"
  title="nested"
/>
`;

exports[`FieldIcon renders known field types null is rendered 1`] = `
<EuiToken
  aria-label="null"
  className="kbnFieldIcon"
  iconType="tokenNull"
  size="s"
  title="null"
/>
`;

exports[`FieldIcon renders known field types number is rendered 1`] = `
<EuiToken
  aria-label="number"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="number"
/>
`;

exports[`FieldIcon renders known field types number_range is rendered 1`] = `
<EuiToken
  aria-label="number_range"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="number_range"
/>
`;

exports[`FieldIcon renders known field types percolator is rendered 1`] = `
<EuiToken
  aria-label="percolator"
  className="kbnFieldIcon"
  iconType="tokenPercolator"
  size="s"
  title="percolator"
/>
`;

exports[`FieldIcon renders known field types point is rendered 1`] = `
<EuiToken
  aria-label="point"
  className="kbnFieldIcon"
  iconType="tokenShape"
  size="s"
  title="point"
/>
`;

exports[`FieldIcon renders known field types rank_feature is rendered 1`] = `
<EuiToken
  aria-label="rank_feature"
  className="kbnFieldIcon"
  iconType="tokenRankFeature"
  size="s"
  title="rank_feature"
/>
`;

exports[`FieldIcon renders known field types rank_features is rendered 1`] = `
<EuiToken
  aria-label="rank_features"
  className="kbnFieldIcon"
  iconType="tokenRankFeatures"
  size="s"
  title="rank_features"
/>
`;

exports[`FieldIcon renders known field types scaled_float is rendered 1`] = `
<EuiToken
  aria-label="scaled_float"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="scaled_float"
/>
`;

exports[`FieldIcon renders known field types search_as_you_type is rendered 1`] = `
<EuiToken
  aria-label="search_as_you_type"
  className="kbnFieldIcon"
  iconType="tokenSearchType"
  size="s"
  title="search_as_you_type"
/>
`;

exports[`FieldIcon renders known field types semantic_text is rendered 1`] = `
<EuiToken
  aria-label="semantic_text"
  className="kbnFieldIcon"
  iconType="tokenSemanticText"
  size="s"
  title="semantic_text"
/>
`;

exports[`FieldIcon renders known field types shape is rendered 1`] = `
<EuiToken
  aria-label="shape"
  className="kbnFieldIcon"
  iconType="tokenShape"
  size="s"
  title="shape"
/>
`;

exports[`FieldIcon renders known field types short is rendered 1`] = `
<EuiToken
  aria-label="short"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="short"
/>
`;

exports[`FieldIcon renders known field types sparse_vector is rendered 1`] = `
<EuiToken
  aria-label="sparse_vector"
  className="kbnFieldIcon"
  iconType="tokenVectorSparse"
  size="s"
  title="sparse_vector"
/>
`;

exports[`FieldIcon renders known field types string is rendered 1`] = `
<EuiToken
  aria-label="string"
  className="kbnFieldIcon"
  iconType="tokenString"
  size="s"
  title="string"
/>
`;

exports[`FieldIcon renders known field types tdigest is rendered 1`] = `
<EuiToken
  aria-label="tdigest"
  className="kbnFieldIcon"
  iconType="tokenHistogram"
  size="s"
  title="tdigest"
/>
`;

exports[`FieldIcon renders known field types text is rendered 1`] = `
<EuiToken
  aria-label="text"
  className="kbnFieldIcon"
  iconType="tokenString"
  size="s"
  title="text"
/>
`;

exports[`FieldIcon renders known field types unsigned_long is rendered 1`] = `
<EuiToken
  aria-label="unsigned_long"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
  title="unsigned_long"
/>
`;

exports[`FieldIcon renders known field types version is rendered 1`] = `
<EuiToken
  aria-label="version"
  className="kbnFieldIcon"
  iconType="tokenTag"
  size="s"
  title="version"
/>
`;

exports[`FieldIcon renders known field types wildcard is rendered 1`] = `
<EuiToken
  aria-label="wildcard"
  className="kbnFieldIcon"
  iconType="tokenString"
  size="s"
  title="wildcard"
/>
`;

exports[`FieldIcon renders with className if provided 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon myClass"
  color="gray"
  iconType="question"
  size="s"
  title="test"
/>
`;

exports[`FieldIcon supports same props as EuiToken 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon"
  color="euiColorVis0"
  fill="none"
  iconType="tokenNumber"
  shape="circle"
  size="l"
  title="test"
/>
`;
